# app/Models/Interactions/Customer.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models\Interactions;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Customer extends Model
+{
+    protected $table = 'crm_customer';
+}
