# app/Models/Interactions/Interaction.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models\Interactions;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Interaction extends Model
+{
+    protected $table = 'crm_interaction';
+}
