# routes/web.php
@@ -11,7 +11,7 @@
 |
 */
 
-$router->get('/', function () use ($router) {    
+$router->get('/', function () use ($router) {
     return $router->app->version();
 });
 
@@ -23,4 +23,9 @@ $api->version('v1', function ($api) {
     $api->get('parts/{id}', 'App\Http\Controllers\v1\Parts\PartsController@show');
     $api->post('parts/{id}', 'App\Http\Controllers\v1\Parts\PartsController@update');
     $api->delete('parts/{id}', 'App\Http\Controllers\v1\Parts\PartsController@destroy');
+
+    $api->group(['prefix' => 'interactions'], function($api) {
+        $api->get('/', 'App\Http\Controllers\v1\Interactions\InteractionsController@index');
+        $api->post('send-email/{lead}', 'App\Http\Controllers\v1\Interactions\InteractionsController@sendEmail');
+    });
 });
